syntax = "proto3";

package rpi;

import "base.proto";

message ResponseVersion {
  string revision = 1;
  string version = 2;
}

message RequestModprobe {
  string module = 1;
}

service Common {
  rpc GetVersion (Void) returns (ResponseVersion) {};
  rpc Modprobe (RequestModprobe) returns (Void) {};
}