syntax = "proto3";

package rpi;

import "base.proto";

message RequestOpen {
    int32 width = 1;
    int32 height = 2;
    int32 rotation = 3;
}

message ResponseImage {
    bytes imageBytes = 1;
    int32 width = 2;
    int32 height = 3;
}

service PiCamService {
    rpc Open(RequestOpen) returns (Void) {};
    rpc Close(Void) returns (Void) {};
    rpc GetFrames (Void) returns (stream ResponseImage){};
}